# agi-os

./: .eslintrc.js  .gitignore  AGI-OS-INTEGRATION.md  AGI-OS_Integration_Report.md  AGI_OS_COMPLETENESS_ASSESSMENT.md  AGI_OS_INTEGRATION_ARCHITECTURE.md  AGI_OS_INTEGRATION_REPORT.md  AUTOGNOSTIC_LLM_PLAN_ANALYSIS.md  BUILD_DEPENDENCY_ANALYSIS.md  BUILD_DEPENDENCY_MAP.md  BUILD_FIXES_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_OPTIMIZATION_COMPLETE.md  CI_BUILD_FIXES_SUMMARY.md  CI_OPTIMIZATION_COMPARISON.md  CLAUDE.md  CMakeLists.txt  COGNITIVE_RECONCILIATION.md  COGNITIVE_SYNERGY_IMPLEMENTATION.md  COGNITIVE_SYNERGY_INTEGRATION.md  COGPILOT_INTEGRATION.md  COGTASKFLOW_ANALYSIS.md  COGTASKFLOW_IMPLEMENTATION_PLAN.md  COGTASKFLOW_WRAPPER_DESIGN.md  COMPONENT_INTEGRATION.md  CONSCIOUSNESS_BUILD_INTEGRATION_GUIDE.md  CONSCIOUSNESS_LAYER_INTEGRATION.md  DAS_CogPlan9_Integration_Report.md  DEBIAN_PACKAGING.md  DEBIAN_PACKAGING_COMPLETE.md  DEEP_TREE_ECHO_INTEGRATION.md  DEPENDENCY_ANALYSIS.md  Dockerfile  ERRORS_AND_ISSUES.md  ERRORS_FIXED.md  EXTENDED_INTEGRATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INFERNO_KERNEL_INTEGRATION_PLAN.md  (+47 more)
archive/experimental/aphrodite-engine/: CMakeLists.txt  README.md
archive/experimental/gnucash/: CMakeLists.txt  README.md
archive/experimental/koboldcpp/: CMakeLists.txt  README.md
archive/experimental/motor/: CMakeLists.txt
cogbolt/:  (2).gitignore  .copilot-rules.md  .gitignore  ADVANCED_AI_FEATURES_COMPLETE.md  AI_CHAT_SETUP_GUIDE.md  AI_CODE_COMPLETION_INTEGRATION_COMPLETE.md  AI_IMPLEMENTATION_COMPLETE.md  AI_MODELS_README.md  AI_TESTING_COMPLETE.md  AI_TESTING_STRATEGY.md  BUILD_SUMMARY.md  BUILD_TEST_REPORT.md  CI_CD_WORKFLOW_NOTE.md  CMakeLists.txt  CMakeLists_drawkern.txt  CMakePresets.json  CONTRIBUTING.md  CURRENT_SESSION_REPORT.md  DEVO-GENESIS.md  Drawterm-Style GUI Rendering.md  ERROR_ANALYSIS.md  FEATURE_IMPLEMENTATION_PLAN.md  GGML_ANALYSIS.md  GGML_ARCHITECTURE_CORRECTED.md  GUI_INTEGRATION_COMPLETE.md  IMGUI_DARK_MODE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Infrastructure as Glyphs.md  LSP_IMPLEMENTATION_COMPLETE.md  MEMORY_LEAK_DETECTION_IMPLEMENTATION.md  MULTI_CURSOR_IMPLEMENTATION.md  NETWORK_OPTIMIZATIONS.md  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PLUGIN_SYSTEM_IMPLEMENTATION.md  PROJECT_COMPLETION_EVALUATION.md  README.md  README_GUI.md  (+97 more)
cogbolt/.ccls-cache/@@home@runner@workspace/: @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@algorithm.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@auto_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@binders.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bit.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@algorithmfwd.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@align.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@alloc_traits.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@allocated_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@allocator.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@atomic_base.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@atomic_lockfree_defines.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_ios.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_ios.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_string.h.blob  (+255 more)
cogbolt/.github/: PULL_REQUEST_TEMPLATE.md
cogbolt/cmake/: valgrind.supp
cogbolt/docs/: ADVANCED_CODE_ANALYSIS.md  BENCHMARK_SUITE.md  CODE_COVERAGE.md  COLLABORATIVE_EDITING.md  CROSS_PLATFORM_DEPLOYMENT.md  Doxyfile  Doxyfile.custom  FINAL_TODOS_SUMMARY.md  GETTING_STARTED.md  GIT_INTEGRATION.md  GPU_ACCELERATION.md  INTEGRATED_DEBUGGER.md  LOGGING_SYSTEM.md  LSP_PHASE1_IMPLEMENTATION_PLAN.md  LSP_SUPPORT.md  MEMORY_LEAK_DETECTION.md  MODEL_SETUP.md  PERFORMANCE_PROFILER.md  PLUGIN_SYSTEM.md  README.md  REMAINING_TODOS_IMPLEMENTATION.md  SSR_PIPELINE.md  USER_GUIDE.md  WIDGET_FRAMEWORK.md  code_folding.md  dependency-management.md  theme-system.md
cogbolt/examples/: README_MEMORY_LEAK_DETECTION.md  collaborative_editor_example.cpp  memory_leak_detection_example.cpp
cogbolt/scripts/: README.md  convert_model.sh  download_rwkv_model.py  download_test_models.sh  package-manager.py  setup-deps.sh  test-package-management.py  validate-roadmap.js
cogbolt/test/: CMakeLists.txt  basic_test.cpp  test_ai_ggml.cpp  test_ai_models.cpp  test_ai_models_complete.cpp  test_ai_models_simple.cpp  test_bolt_core.cpp  test_bpe_tokenizer.cpp  test_code_analyzer.cpp  test_code_folding.cpp  test_collaboration.cpp  test_debugger.cpp  test_error_handling.cpp  test_file_tree.cpp  test_gguf_loader.cpp  test_git_integration.cpp  test_gpu_acceleration.cpp  test_integration.cpp  test_keyboard_shortcuts.cpp  test_logging.cpp  test_memory_leak_detector.cpp  test_minimap.cpp  test_model_loader.cpp  test_model_loading.cpp  test_multi_cursor.cpp  test_network_optimizations.cpp  test_plugin_system.cpp  test_runner.cpp  test_rwkv_integration.cpp  test_sanitizer_integration.cpp  test_split_view.cpp  test_tab_bar.cpp  test_theme_system.cpp  test_widget_framework.cpp
core/inferno-kernel/: CI_TESTING.md  CMakeLists.txt  InfernoKernelConfig.cmake.in  README.md  mkconfig
core/integration/: CMakeLists.txt
personification/orrrg/: IMPLEMENTATION.md  README.md  pyproject.toml
personification/ortts/: Cargo.toml  Dockerfile  Justfile  README.md  cspell.config.yaml  flake.nix
personification/reproduction-ort-session-segmentation-fault/: Cargo.toml  flake.nix
tests/native-code/: CMakeLists.txt  test_cognitive_bridge.c
(+5186 files in other folders)
